--- a/src/assets/scss/pages/loginPage.scss
+++ b/src/assets/scss/pages/loginPage.scss
@@ -1,37 +1,53 @@
 @import "../variable";
 
+body {
+  margin: 0;
+}
 .login-window {
-  background: $white;
-  overflow: hidden;
+  background: linear-gradient(to right, $color-1, $color-2);
   color: $color-1;
+  height: 100vh;
 }
-.login-title {
-    color: $LightBlack;
-  font-size: 16px;
-  text-align: center;
-  font-weight: bold;
-  width: 90%;
-  margin: 20px auto 10px;
-  font-family: $openSans;
+.card-view {
+  background: $white;
+  margin-top: 10vh;
+  padding: 40px;
+  border-radius: 10px;
+
 }
-.login-input {
+
+.card-title {
   font-family: $openSans;
-  font-size: 14px;
-  display: block;
-  border: 1px solid #0084a51f;
-  border-radius: 5px;
-  padding: 10px;
-  margin: 10px auto;
-  width: 90%;
-  background: #1f9eab1c;
-  box-shadow: inset 0px 0px 4px #0080a34d;
-  transition: all 0.3s linear;
-  transform: scale(0.97);
-  &:hover , &:focus {
-    outline: none;
-    transform: scale(1);
+  font-size: 20px;
+  color: $LightBlack;
+}
+.card-subtitle {
+  font-family: $openSans;
+  color: $grey;
+}
+.input-login> input  {
+  background: $atlassian-default;
+  color: $atlassian-color;
+  border: none;
+}
+.ant-btn-cipher-primary {
+  background: $color-2;
+  color: $white;
+  border: none;
+  &:hover, &:focus {
+    background: $color-1;
+    color: $white;
+    box-shadow: $card2-shadow
   }
 }
-.login-button {
-  background: linear-gradient(to right, $color-1 , $color-2, $color-3);
+.ant-btn-cipher-primary-inverse {
+  background: $white;
+  color: $atlassian-color;
+  border: none;
+  cursor: pointer;
+  &:hover, &:focus {
+    background: $atlassian-default;
+    color: $color-1;
+    box-shadow: $card2-shadow
+  }
 }
