--- a/src/assets/scss/pages/loginPage.scss
+++ b/src/assets/scss/pages/loginPage.scss
@@ -48,6 +48,6 @@ body {
   &:hover, &:focus {
     background: $atlassian-default;
     color: $color-1;
-    box-shadow: $card2-shadow
+    //box-shadow: $card2-shadow
   }
 }
