fix: layout done for cipher

--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -1,6 +1,8 @@
 // basic palatte
 
 $color-1: #267ba0;
+$color-1-lightOpacity: rgba(38, 123, 160, 0.2);
+$color-2-lightOpacity: rgba(113, 193, 179, 0.2);
 $color-2: #71c1b3;
 $color-3: #71c1b3;
 $color-4: #b3dcc0;
