feat: added show notes, fixed routing issue

--- a/src/assets/scss/pages/_dashboardLayout.scss
+++ b/src/assets/scss/pages/_dashboardLayout.scss
@@ -68,3 +68,7 @@
 .ant-menu-vertical .ant-menu-submenu-selected, .ant-menu-vertical-left .ant-menu-submenu-selected, .ant-menu-vertical-right .ant-menu-submenu-selected {
   color: $color-1
 }
+.ant-menu-horizontal > .ant-menu-item:hover, .ant-menu-horizontal > .ant-menu-submenu:hover, .ant-menu-horizontal > .ant-menu-item-active, .ant-menu-horizontal > .ant-menu-submenu-active, .ant-menu-horizontal > .ant-menu-item-open, .ant-menu-horizontal > .ant-menu-submenu-open, .ant-menu-horizontal > .ant-menu-item-selected, .ant-menu-horizontal > .ant-menu-submenu-selected {
+  color: $color-1;
+  border-bottom: 2px solid $color-2;
+}
