--- a/src/assets/scss/pages/_notes.scss
+++ b/src/assets/scss/pages/_notes.scss
@@ -2,7 +2,6 @@
 
 .note-cards {
      background: white;
-     margin: 20px 10px;
      padding: 20px;
      border-radius: 5px;
      box-shadow: 0px 0px 10px rgba(108, 183, 251, 0.2);
@@ -30,6 +29,7 @@
      margin-top: 5px;
      font-size: 12px;
      color: $grey;
+     min-height: 130px;
 }
 .div-center {
      margin: 0 auto;
@@ -48,4 +48,46 @@
      font-size: 10px;
      color: $grey;
      text-align: center;
+}
+.caret-back {
+     color: $grey;
+     font-family: $openSans;
+     font-size: 14px;
+     font-weight: bold;
+     cursor: pointer;
+     margin-left: -22px;
+}
+.caret-title {
+     font-size: 2rem;
+     font-weight: bold;
+     color: $LightBlack;
+     font-family: $openSans;
+     @media screen and (max-width: 600px) {
+          font-size: 1.2rem;
+     }
+}
+
+.dashboard-normal-card {
+     background: white;
+     margin: 20px 10px;
+     padding: 20px;
+     border-radius: 5px;
+     box-shadow: 0px 0px 10px rgba(108, 183, 251, 0.2);
+     transition: all 0.2s ease-in;
+     cursor: pointer;
+     &:hover {
+          box-shadow: 0px 0px 20px rgba(108, 183, 251, 0.35);
+     }
+}
+.title-post-note {
+     font-size: 20px;
+     font-weight: bold;
+     color: $grey;
+     font-family: $openSans;
+     margin: 10px 10px 10px 0px;
+}
+textarea.input-login {
+     background: $atlassian-default;
+     color: $atlassian-color;
+     border: none;
 }
