--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -1,6 +1,21 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:200,400,500,700');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:200,400,500,700");
 //font-family: 'Montserrat', sans-serif;
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700,900');
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700,900");
 //font-family: 'Roboto', sans-serif;
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700");
 //font-family: 'Open Sans', sans-serif;
+@import url("https://fonts.googleapis.com/css?family=Merriweather");
+//font-family: 'Merriweather', serif;
+
+.montserrat {
+     font-family: "Montserrat", sans-serif;
+}
+.roboto {
+     font-family: "Roboto", sans-serif;
+}
+.open-sans {
+     font-family: "Open Sans", sans-serif;
+}
+.merriweather {
+     font-family: "Merriweather", serif;
+}
