--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -6,6 +6,10 @@
 //font-family: 'Open Sans', sans-serif;
 @import url("https://fonts.googleapis.com/css?family=Merriweather");
 //font-family: 'Merriweather', serif;
+@import url('https://fonts.googleapis.com/css?family=Indie+Flower');
+// font-family: 'Indie Flower', cursive;
+@import url('https://fonts.googleapis.com/css?family=Bitter');
+// font-family: 'Bitter', serif;
 
 .montserrat {
      font-family: "Montserrat", sans-serif;
@@ -18,4 +22,10 @@
 }
 .merriweather {
      font-family: "Merriweather", serif;
+}
+.indie-flower {
+     font-family: 'Indie Flower', cursive;
+}
+bitter {
+     font-family: 'Bitter', serif;
 }
