build: added dark mode

--- a/src/assets/scss/_variable.scss
+++ b/src/assets/scss/_variable.scss
@@ -12,6 +12,9 @@ $color-6: #ee2658;
 $white: #fff;
 $black: #000;
 $LightBlack: #404040;
+$darkTheme: #2b2b2b;
+$darkThemeColorDark: #808080;
+$darkThemeColor: #c7c7c7;
 $grey: rgba(128, 128, 128, 0.56);
 
 
