--- a/src/assets/scss/pages/_dashboardLayout.scss
+++ b/src/assets/scss/pages/_dashboardLayout.scss
@@ -11,7 +11,7 @@
   margin: 15px auto!important;
   width: 120px;
   height: 31px;
-  background: hsla(0,0%,100%,.2);
+  //background: hsla(0,0%,100%,.2);
 }
 .logoBrandFold {
   margin: 0px 0 0 -35px;
